# crypto_file_hash

./: Cargo.toml  README.md  test.txt
src/: file_hasher.rs  main.rs
tests/: security_tests.rs
